Initial commit: disaster preparedness app

--- a/netlify.toml
+++ b/netlify.toml
@@ -11,3 +11,5 @@
 [dev]
   framework = "vite"       # auto-detects Vite
   # remove the port line to avoid conflicts
+[build.environment]
+  NODE_VERSION = "18"
